<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/white">

    <com.udacity.LoadingButton
        android:id="@+id/loading_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:loadingColor="@color/colorPrimaryDark"
        app:buttonColor="@color/colorPrimary"
        app:circleColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        app:srcCompat="@mipmap/ic_load_status_icon_foreground"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logo" />

    <RadioGroup
        android:id="@+id/select_option"
        android:layout_width="0dp"
        android:layout_height="283dp"
        app:layout_constraintBottom_toTopOf="@+id/loading_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/glide_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:fontFamily="@font/montserrat"
            android:text="@string/glide_file_download"
            android:textSize="@dimen/text_size"
            android:textAppearance="@style/option_style" />

        <RadioButton
            android:id="@+id/load_app_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/option_style"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/text_size"
            android:text="@string/loadapp_file_download"
            android:layout_margin="@dimen/margin"/>

        <RadioButton
            android:id="@+id/retrofit_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_file_download"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/text_size"
            android:textAppearance="@style/option_style"
            android:layout_margin="@dimen/margin"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>